# Barge

./: .gitmodules  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/barge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ComputeShaderSetup  ComputeShaderSetup.cpp  a.out  backup.cpp  barge.cpp  cpu_MatrixMultiplication.cpp  cpu_MatrixMultiplication.h  easyvk.cpp  plan.txt  run_mm.cpp
app/src/main/java/com/example/barge/: MainActivity.kt
app/src/main/java/com/example/barge/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/shaders/: compute.glsl  matrix.glsl  matrix.spv
app/src/test/java/com/example/barge/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
hello-jni/: build.gradle
hello-jni/app/: build.gradle
hello-jni/app/src/main/cpp/: CMakeLists.txt  VulkanMatrixMultiplication.cpp  easyvk.cpp  easyvk.h  hello-jni.cpp  hellovk.h  test.cpp
hello-jni/app/src/main/java/com/example/hellojni/: HelloJni.kt
hello-jni/app/src/main/res/layout/: activity_hello_jni.xml
hello-jni/app/src/main/res/values/: strings.xml
hello-jni/app/src/main/shaders/: matrix_multiply.comp  matrix_multiply.spv  simple_compute_shader.comp  simple_compute_shader.comp.spv
